--- a/src/scss/formelements.scss
+++ b/src/scss/formelements.scss
@@ -91,6 +91,10 @@ input[type="email"]{
     margin-bottom: 5px;
 }
 
+.formelements-textfield__container h3{
+    margin-bottom: 5px;
+}
+
 .formelements-textfield__text::after{
     position: absolute;
     content: "Default";
@@ -158,7 +162,13 @@ input[type="email"]{
     margin-bottom: 16px;
 }
 
-//=====================кастомный чекбокс
+.formelements-checkbox__like{
+    min-height: 20px;
+    margin-top: 16px;
+    margin-bottom: 40px;
+}
+
+//===================== кастомный чекбокс
 
 .checkbox-container  {
     display: block;
@@ -224,10 +234,169 @@ input[type="checkbox"]{
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
   }
-//====================конец чекбокса 
+//==================== конец чекбокса 
 
+//================= начало радио кнопки
+.radio__container {
+    display: inline-block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+  
+  /* Hide the browser's default radio button */
+  .radio__container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+  }
+  
+  /* Create a custom radio button */
+  .radio-checkmark {
+    position: absolute;
+    top: 2px;
+    left: 5px;
+    height: 20px;
+    width: 20px;
+    border: 1px solid rgba(31, 32, 65, 0.25);
+    box-sizing: border-box;
+    border-radius: 10px;
+  }
+  
+  /* Create the indicator (the dot/circle - hidden when not checked) */
+  .radio-checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+  }
 
+  .radio__container input:checked ~ .radio-checkmark {
+    border: 1px solid #BC9CFF;
+  }
+  
+  /* Show the indicator (dot/circle) when checked */
+  .radio__container input:checked ~ .radio-checkmark:after {
+    display: block;
+  }
+  
+  /* Style the indicator (dot/circle) */
+  .radio__container .radio-checkmark:after {
+       top: 3px;
+      left: 3px;
+      width: 12px;
+      height: 12px;
+      border-radius: 50%;
+      background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
+  }
 
+//================== конец радио кнопки
+
+//==================== начало кнопки лайк
+/* Customize the label (the container) */
+.like__container {
+    display: inline-block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 10px;
+    line-height: 12px;
+    color: rgba(31, 32, 65, 0.25);
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    margin: 0 10px;
+  }
+
+.like-heart::before{
+    position: absolute;
+    content: "❤";
+    top: 6px;
+    left: 6px;
+    width: 10px;
+    height: 10px;
+    color: rgba(31, 32, 65, 0.25);
+}
+
+.like-number::before{
+    position: absolute;
+    content: "2";
+    top: 6px;
+    right: 0;
+    width: 10px;
+    height: 10px;
+    color: rgba(31, 32, 65, 0.25);
+}
+ 
+.like__container input:checked ~ .like-heart::before {
+    color: #BC9CFF;
+}
+
+.like__container input:checked ~ .like-number::before {
+    color: #BC9CFF;
+}
+  /* Hide the browser's default radio button */
+  .like__container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+  }
+  
+  /* Create a custom radio button */
+  .like-checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 40px;
+    height: 20px;
+    border-radius: 50%;
+    border: 1px solid rgba(31, 32, 65, 0.25);
+    border-radius: 10px;
+  }
+
+  /* When the radio button is checked, add a blue background */
+  .like__container input:checked ~ .like-checkmark {
+    border-radius: 10px;
+    font-weight: bold;
+    box-shadow: 0 0 6px 0 rgba(157, 96, 212, 0.5);
+    border: solid 2px transparent;
+    background-image: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)), linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
+    background-origin: border-box;
+    background-clip: content-box, border-box;
+    box-shadow: 1px 1000px 1px #fff inset;
+  }
+  
+
+  /* Create the indicator (the dot/circle - hidden when not checked) */
+  .like-checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+  }
+  
+  /* Show the indicator (dot/circle) when checked */
+  .like__container input:checked ~ .like-checkmark:after {
+    display: block;
+  }
+  
+  /* Style the indicator (dot/circle) */
+  .like__container .like-checkmark:after {
+    top: 9px;
+    left: 9px;
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background: white;
+  }
+//==================== конец кнопки лайк
 
 .select-guests{
     width: 320px;
@@ -253,6 +422,36 @@ input[type="checkbox"]{
 
 hr{
     border-color: rgba(31, 32, 65, 0.1);
+}
+
+.formelements-dropdown__header-1{
+    position: relative;
+}
+
+.formelements-dropdown__header-1::after{
+    position: absolute;
+    content: "Default";
+    text-transform: uppercase;
+    font-size: 12px;
+    color: rgba(31, 32, 65, 0.5);
+    top:0;
+    right: 0;
+    font-weight: normal;
+}
+
+.formelements-dropdown__header-2{
+    position: relative;
+}
+
+.formelements-dropdown__header-2::after{
+    position: absolute;
+    content: "expanded";
+    text-transform: uppercase;
+    font-size: 12px;
+    color: rgba(31, 32, 65, 0.5);
+    top: 0;
+    right: 0;
+    font-weight: normal;
 }
 
 .formelements-comfort__smile{
@@ -363,9 +562,9 @@ input[type="password"]{
 }
 
 .formelements-checkbox__container{
-    margin-right: 125px;
+    margin-right: 100px;
     margin-bottom: 40px;
-    width: 270px;
+    width: 280px;
 }
 
 .formelements-checkbox__checkbox{
@@ -391,6 +590,10 @@ input[type="password"]{
 
 .formelements-dropdown__container2{
     margin-right: 70px;
+}
+
+.formelements-rich__header{
+    margin-bottom: 16px;
 }
 
 //круглый чекбокс
@@ -582,3 +785,58 @@ input:checked + .slider.round{
 input[type="date"].input-date{
     width: 150px;   
 }
+
+.formelements-rich__container h4{
+    margin-bottom: 5px;
+}
+
+.formelements-rich__container p{
+    font-size: 12px;
+    line-height: 14px;
+    color: rgba(31, 32, 65, 0.5);
+    margin-top: 0;
+}
+
+//============ star code 
+
+.rating-stars .material-icons{
+    letter-spacing: -4px;
+}
+
+div.rating-stars{
+    display: inline-block;
+}
+  
+  /* Rating Star Widgets Style */
+  .rating-stars ul {
+    list-style-type:none;
+    padding:0;
+    
+    -moz-user-select:none;
+    -webkit-user-select:none;
+  }
+  .rating-stars ul > li.star {
+    display:inline-block;
+    
+  }
+  
+  /* Idle State of the stars */
+  .rating-stars ul > li.star > i {
+    color:#ccc; /* Color on idle state */
+  }
+  
+  /* Hover state of the stars */
+  .rating-stars ul > li.star.hover > i {
+    color: #8BA4F9;
+  }
+  
+  /* Selected state of the stars */
+  .rating-stars ul > li.star.selected > i {
+    color: #BC9CFF;
+  }
+  
+  .rating-1{
+      margin-right: 10px;
+  }
+
+//============= end star code
