исправила кнопку в хедере

--- a/src/pug/header-login.pug
+++ b/src/pug/header-login.pug
@@ -13,6 +13,6 @@ header.main-header
 			
 			ul.main-login-list
 				li.main-login-list__item 
-					button.main-login-list__login.button login
+					button.main-login-list__login.button.button-white login
 				li.main-login-list__item  
 					button.main-login-list__register.button register
