--- a/src/scss/registration.scss
+++ b/src/scss/registration.scss
@@ -1,5 +1,10 @@
 .header-registration__container{
     position: relative;
+    margin: 0 auto;
+}
+
+.header-registration__container img{
+    width: 100%;
 }
 
 .header__container-registration{
