--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,12 +1,16 @@
+
+
 .main-header__container{
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
     padding: 0 140px;
     margin: 0 auto;
     background-color: #ffffff;
-    width: 1160px;
+    max-width: 1160px;
+    min-width: 1160px;
 }
 
 .main-header-logo{
@@ -23,6 +27,7 @@
 .main-nav-list{
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     list-style: none;
     align-items: center;
     margin: 0;
@@ -80,4 +85,9 @@
     height: 30px;
 
     background: rgba(31, 32, 65, 0.1);
+}
+@media (max-width: 1200px){
+    .main-header__container{
+        min-width: 320px;
+    }
 }
