--- a/src/pug/landingpage.pug
+++ b/src/pug/landingpage.pug
@@ -8,7 +8,7 @@ html(lang="en")
   body
     include header-login.pug
     .landing-page__image-container
-      img.main-img(src="img/image.jpg")
+      img(src="img/image.jpg")
       .landing-page__container
         include findnumbercard.pug
       p.landing-page__text Лучшие номера для вашей работы, отдыха и просто вдохновения
