--- a/src/scss/landingpage.scss
+++ b/src/scss/landingpage.scss
@@ -1,14 +1,18 @@
 .landing-page__image-container{
     position: relative;
+    width: 100%;
+    max-width: 1440px;
+    min-height: 374px;
+    background-color: #fff;
 }
 
 .landing-page__image-container img{
-    display: inline-block;
+    width: 100%;
 }
 
 .landing-page__container{
     position: absolute;
-    left: 140px;
+    left: 10%;
     top: 70px;
 }
 
@@ -17,4 +21,10 @@
     right: 140px;
     bottom: 15px;
     width: 300px;
+}
+
+@media (max-width: 1000px){
+    .landing-page__text{
+        display: none;
+    }
 }
