--- a/src/scss/searchroom.scss
+++ b/src/scss/searchroom.scss
@@ -1,14 +1,15 @@
 .search-room__cards{
     display: flex;
     flex-wrap: wrap;
-    width: 830px;
+    max-width: 830px;
 }
 
 .searchroom__container{
     display: flex;
+    flex-wrap: wrap;
     background-color: #fff;
     padding: 30px 140px 70px;
-    width: 1160px;
+    max-width: 1160px;
 }
 
 .searchroom__container-options{
