--- a/src/pug/cards.pug
+++ b/src/pug/cards.pug
@@ -5,6 +5,9 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
         link(href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet")
+        script(src="https://code.jquery.com/jquery-1.12.4.js")
+        <link href="../node_modules/air-datepicker/dist/css/datepicker.css" rel="stylesheet" type="text/css">
+        <script src="../node_modules/air-datepicker/dist/js/datepicker.js"></script>
         title Cards
     body  
         div.headerlogo__container
