--- a/src/pug/signincard.pug
+++ b/src/pug/signincard.pug
@@ -1,7 +1,8 @@
 .signincard__container.card
     h1 Войти
-    input(type="email")
-    input(type="password")
-    button.button Войти 
-    p Нет аккаунта на Toxin? 
-    button.button-white Создать
+    input(type="email" placeholder="Email")
+    input(type="password" placeholder="Пароль")
+    button.button.button-long Войти 
+    .signin__row
+        p Нет аккаунта на Toxin? 
+        button.button-white Создать
