--- a/src/scss/formelements.scss
+++ b/src/scss/formelements.scss
@@ -528,6 +528,7 @@ input[type="password"]{
     font-size: 14px;
     line-height: 24px;
     color: rgba(31, 32, 65, 0.25);
+    padding-left: 15px;
 }
 
 .formelements-comfort__fire{
