--- a/src/pug/registrationcard.pug
+++ b/src/pug/registrationcard.pug
@@ -1,20 +1,26 @@
 .registrationcard__container.card
     h1 Регистрация аккаунта
-    input(type="text")
-    input(type="text")
-    label
+    input(type="text" placeholder="Имя")
+    input(type="text" placeholder="Фамилия")
+    label.radio__container
         input(type="radio" name="gender")
+        span.radio-checkmark
         span Мужчина
-    label
+    label.radio__container
         input(type="radio" name="gender" checked)
+        span.radio-checkmark
         span Женщина
     br
-    label Дата рождения
-        input(type="date")
-    label Данные для входа в сервис
-        input(type="email")
-        input(type="password")
-    p Получать спецпредложения
-    button.button Перейти к оплате
-    p Уже есть аккаунт на Toxin 
-    button.button-white Войти
+    h3 Дата рождения
+        <input type='text' class="datepicker-here"/>
+    h3 Данные для входа в сервис
+        input(type="email" placeholder="Email")
+        input(type="password" placeholder="Пароль")
+    label(class="switch")
+        input(type="checkbox" checked)
+        span(class="slider round")
+    span Получать спецпредложения
+    button.button.button-long Перейти к оплате
+    .registraion--row
+        p Уже есть аккаунт на Toxin 
+        button.button-white Войти
