--- a/src/scss/cards.scss
+++ b/src/scss/cards.scss
@@ -2,19 +2,127 @@
     width: 320px;
     background-color: #fff;
     padding: 40px 30px 30px 30px;
+    h3{
+        margin-bottom: 5px;
+    }
+    .iqdropdown{
+        margin-bottom: 31px;
+        box-sizing: border-box;
+        width: 320px;
+    }
+    
+}
+
+.findnumber__row{
+    display: flex;
+    input{
+        box-sizing: border-box;
+        width: 150px;
+        &:nth-child(2){
+            margin-right: 20px;
+            margin-bottom: 20px;    
+        }
+    }
 }
 
 .bronecard__container{
     width: 320px;
     background-color: #fff;
     padding: 40px 30px 30px 30px;
+    input{
+        box-sizing: border-box;
+        width: 320px;
+        margin-bottom: 10px;
+    }
+    .iqdropdown{
+        margin-bottom: 20px;
+        box-sizing: border-box;
+        width: 320px;
+    }
+    .datepicker-here{
+        box-sizing: border-box;
+        width: 150px;
+        &:nth-child(2){
+            margin-right: 20px;
+            margin-bottom: 20px;    
+        }
+    }
+    .bronecard__number{
+        font-family: "Quicksand";
+        font-style: normal;
+        font-weight: bold;
+        font-size: 14px;
+        line-height: 17px;
+        color: #1F2041;
+    }
+
+    .bronecard__price{
+        font-family: "Montserrat";
+        font-style: normal;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 18px;
+        color: rgba(31, 32, 65, 0.5);
+
+        .bronecard__bold{
+            font-weight: bold;
+        }
+    }
+    .bronecard__purple{
+        text-transform: uppercase;
+        font-family: Montserrat;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 12px;
+        line-height: 15px;
+        color: #BC9CFF;
+    }
+    .bronecard__row-p{
+        display: flex;
+        justify-content: space-between;
+    }
+    .bronecard__row{
+        display: flex;
+    }
+    h3{
+        margin-bottom: 5px;
+    }
+    .bronecard__data-right{
+        text-align: right;
+    }
+    .bronecard__data-left{
+        text-align: left;
+    }
+
+    .bronecard__info{
+        position: relative;
+        margin-right: 25px;
+    }
+    table {
+        border-collapse: separate;
+        border-spacing: 8px 3px;
+      }
+
+    .bronecard__info::after{
+        position: absolute;
+        content: "i";
+        padding: 3px 7px;
+        box-sizing: border-box;
+        width: 20px;
+        height: 20px;
+        top: 2px;
+        right: 0;
+        font-weight: bold;
+        font-size: 12px;
+        line-height: 14px;
+        color: rgba(31, 32, 65, 0.25);
+        border: 1px solid rgba(31, 32, 65, 0.25);
+        border-radius: 50%;
+    }
 }
 
 .calendarcard__container{
-    width: 260px;
     background-color: #fff;
-
-    padding: 40px 30px 30px 30px;
 
 }
 
@@ -31,12 +139,39 @@
     width: 320px;
     background-color: #fff;
     padding: 40px 30px 30px 30px;
+    input{
+        box-sizing: border-box;
+        width: 320px;
+        margin-bottom: 10px;
+    }
+    .datepicker-here{
+        margin-bottom: 20px;
+    }
+    h3{
+        margin-bottom: 5px;
+    }
+    .registraion--row{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
 }
 
 .signincard__container{
     width: 320px;
     background-color: #fff;
     padding: 40px 30px 30px 30px;
+
+    input{
+        box-sizing: border-box;
+        width: 320px;
+        margin-bottom: 10px;
+    }
+    .signin__row{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
 }
 
 .smallcard__container{
